[package]
name = "tt-rss-yt-subs-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yup-oauth2 = "5.1.0"
tokio = { version = "1.9.0", features = ["full"] }
dirs = "3.0.2"
serde = "1.0.127"
hyper-rustls = "0.22.1"
hyper = "0.14.11"
anyhow = "1.0.42"
google-youtube3 = "2.0.4+20210330"