[package]
name = "tt-rss-yt-subs-rs"
version = "0.1.0"
edition = "2018"

[profile.release]
# lto = true
# strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yup-oauth2 = "8.3.3"
tokio = { version = "1.37.0", features = ["full"] }
dirs = "5.0.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", features = ["json"] }
# hyper-rustls = "0.25.0"
# hyper = "0.14.28"
# hyper-rustls = "0.27.0"
# hyper = "1.2.0"
anyhow = "1.0.81"
# google-youtube3 = "5.0.4+20240303"
quick-xml = { version = "0.31", features = [ "serialize", "escape-html" ] }
indicatif = "0.17.8"
base64 = "0.22.0"
serde_yaml = "0.9.34"